# cmstp

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: feature_template.md  fix_template.md
.github/ci_configs/: config-pin_apps.yaml  install-main-apt.yaml  install-main-pipx.yaml
.github/scripts/: format_json.py
.github/workflows/: ci-workflow.yml  ci.yml  publish.yml  reusable-assignee.yml  reusable-branch-name.yml  reusable-labels.yml  reusable-main-script.yml  reusable-pre-commit.yml  reusable-publish.yml
src/cmstp/cli/: pre_setup.py
src/cmstp/config/: default.yaml  enabled.yaml
src/cmstp/core/: logger.py  scheduler.py  task_processor.py
src/cmstp/utils/: cli.py  logger.py  tasks.py  yaml.py
src/cstp/: main.py
src/cstp/cli/: info.py  main_setup.py  pre_setup.py
src/cstp/config/: README.md  default.yaml  enabled.yaml
src/cstp/core/: logger.py  scheduler.py  task_processor.py
src/cstp/utils/: cli.py  command.py  common.py  git_repos.py  interface.py  tasks.py  yaml.py
tests/: TODO  test_hardware_specific.py  test_main.py  test_task_processor.py
tests/config/test_task_processor/: dummy_script.py  valid_custom.yaml  valid_default.yaml
tests/config/test_task_processor/custom/: test_disabled_dependency.yaml  test_eventual_empty_config.yaml  test_extra_task_arg.yaml  test_extra_task_property.yaml  test_nonexistent_task.yaml  test_unallowed_arg.yaml  (+4 more)
(+39 files in other folders)
